--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <link rel="stylesheet" href="style.css" type="text/css">
   <title>My Portfolio</title>
 </head>
 <body>
-  
+  <div class="page-wrapper">
+    <nav class="flex-nav">
+      <div class="flex-nav left"><a href="">My logo</a></div>
+      <div class="flex-nav rigth">
+        <a href="">Portfolio</a>
+        <a href="">About</a>
+        <a href="">Contact</a>
+      </div>
+    </nav>
+  </div>
 </body>
 </html>
