--- a/index.html
+++ b/index.html
@@ -9,15 +9,30 @@
   <title>My Portfolio</title>
 </head>
 <body>
-  <div class="page-wrapper">
+  <div class="container">
     <nav class="flex-nav">
-      <div class="flex-nav left"><a href="">My logo</a></div>
-      <div class="flex-nav rigth">
-        <a href="">Portfolio</a>
-        <a href="">About</a>
-        <a href="">Contact</a>
-      </div>
+      <a href="" class="my-logo">My logo</a>
+      <a href="" class="union-icon"><img src="./images/Union.svg" alt=""></a>
     </nav>
+    <section class="headline-section">
+      <div class="text-area">
+        <h1>I'm Yussuf <br>Glad to see <br>you!</h1>
+        <p>I’m a software developer! I can help you build a product, feature or website Look through some of my work and experience!
+          If you like what you see and have a project you need coded, don’t hestiate to contact me.
+        </p>
+      </div>
+      <div class="social">
+        <div class="let-connect"><a>LET'S CONNECT</a></div>
+        <div class="social-icons">
+          <a href=""><img src="./images/twitter.png" alt=""></a>
+          <a href=""><img src="./images/Linkedin icon.svg" alt=""></a>
+          <a href=""><img src="./images/medium.svg" alt=""></a>
+          <a href=""><img src="./images/github.svg" alt=""></a>
+          <a href=""><img src="./images/angellist.svg" alt=""></a>
+        </div>
+      </div>
+    </section>
+    </div>
   </div>
 </body>
 </html>
