--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="let-connect"><a>LET'S CONNECT</a></div>
         <div class="social-icons">
           <a href=""><img src="./images/twitter.png" alt=""></a>
-          <a href=""><img src="./images/Linkedin icon.svg" alt=""></a>
+          <a href=""><img src="./images/linked.svg" alt=""></a>
           <a href=""><img src="./images/medium.svg" alt=""></a>
           <a href=""><img src="./images/github.svg" alt=""></a>
           <a href=""><img src="./images/angellist.svg" alt=""></a>
