--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 </head>
 <body>
   <div class="container">
-    <nav class="flex-nav">
-      <a href="" class="my-logo">My logo</a>
-      <a href="" class="union-icon"><img src="./images/Union.svg" alt=""></a>
-    </nav>
+    <header>
+      <nav class="flex-nav">
+        <a href="" class="my-logo">My logo</a>
+        <a href="" class="union-icon"><img src="./images/Union.svg" alt=""></a>
+      </nav>
+    </header>
     <section class="headline-section">
       <div class="text-area">
         <h1>I'm Yussuf <br>Glad to see <br>you!</h1>
@@ -23,13 +25,13 @@
       </div>
       <div class="social">
         <div class="let-connect"><a>LET'S CONNECT</a></div>
-        <div class="social-icons">
-          <a href=""><img src="./images/twitter.png" alt=""></a>
-          <a href=""><img src="./images/linked.svg" alt=""></a>
-          <a href=""><img src="./images/medium.svg" alt=""></a>
-          <a href=""><img src="./images/github.svg" alt=""></a>
-          <a href=""><img src="./images/angellist.svg" alt=""></a>
-        </div>
+        <ul class="social-icons">
+          <li><a href=""><img src="./images/twitter.png" alt=""></a></li>
+          <li><a href=""><img src="./images/linked.svg" alt=""></a></li>
+          <li><a href=""><img src="./images/medium.svg" alt=""></a></li>
+          <li><a href=""><img src="./images/github.svg" alt=""></a></li>
+          <li><a href=""><img src="./images/angellist.svg" alt=""></a></li>
+        </ul>
       </div>
     </section>
   </div>
